app/assets/stylesheets/home.scss
// Import Theme Colors
@import 'variable';

// .main-title {
//   margin: 0 400px;
//   width: 500px;
//   text-align: center;
//   font-family: 'Dancing Script', cursive;
//   font-weight: 700;
// }

.entire-page {
  background-color: $unicorn-purple;
}

.profilePage {
  //background-image: url("/unsplash.jpg");
  text-align: center;
}

.topNav {
  background-color: $unicorn-purple;
  font-family: 'Merienda', cursive;
}

.brand-logo {
  margin-left: 0.5em;
  font-family: 'Dancing Script', cursive;
}

.modal-content {
 height: 348px; 
}

.RichTextEditor__editor___1QqIU .DraftEditor-root .DraftEditor-editorContainer {
  height: 202px;
}


canvas {
  margin: 2em;
  width: 50%;
  height: 50%;
}

body {
  background-image: url("brickwall.png");
  background-repeat: repeat;
}

